--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -7,21 +7,23 @@
     box-sizing: border-box;
   }
 
+  body {
+    background-color: rgb(54, 54, 212);
+  }
+
 header {
     display: flex;
     justify-content: center;
+    margin-bottom: 100px;
 }
 
-.calculator {
-    
-}
 .calculator-container {
     display: flex;
     justify-content: center;
 }
 .calculator {
   
-    background-color: lightblue;
+    background-color: rgb(201, 203, 204);
     padding: 15px;
     border-radius: 15px;
    
@@ -50,8 +52,9 @@ header {
 .row button {
     flex: 1;
     margin: 5px;
-    width: 100px;
-    height: 100px;
-    border-radius: 10px;
+    width: 80px;
+    height: 80px;
+    box-shadow: 0 8px 6px -6px black;
+    border: none;
     
 }
